--- a/index.mustache
+++ b/index.mustache
@@ -36,7 +36,7 @@
     <a href="https://github.com/4e6/firefox-lang-stats"><img style="position: absolute; top: 0; left: 0; border: 0; z-index:100;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
     <div style="margin-left: 150px">
       <h2>How much Rust in Firefox?</h2>
-      <p><a href="https://github.com/mozilla/gecko-dev">mozilla/gecko-dev</a> repository statistics on {{title_date}}</p>
+      <p><a href="https://github.com/mozilla-firefox/firefox">mozilla-firefox/firefox</a> repository statistics on {{title_date}}</p>
     </div>
     <div id="piechart" style="width: 900px; height: 500px;"></div>
   </body>
